# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//protozero//protozero_library.gni")

# We don't generate headers for the individual events
# (e.g. sched_switch.proto etc) instead using a table we generate separately to
# dynamically look up the field IDs and types and write the event at runtime.
protozero_library("ftrace") {
  sources = [
    "ftrace_event_bundle.proto",
    "ftrace_event.proto",
    "print.proto",
    "sched_switch.proto",
  ]
  proto_in_dir = "."
}
